--- a/Components/Speech2Text/speech2text.ipynb
+++ b/Components/Speech2Text/speech2text.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,38 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MoviePy - Writing audio in ./transcript.wav\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                      "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MoviePy - Done.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Insert Local Video File Path \n",
     "clip = mp.VideoFileClip(r\"./obamaDeepfake.mp4\")\n",
@@ -61,21 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The tokenizer class you load from this checkpoint is not the same type as the class this function is called from. It may result in unexpected tokenization. \n",
-      "The tokenizer class you load from this checkpoint is 'Wav2Vec2CTCTokenizer'. \n",
-      "The class this function is called from is 'Wav2Vec2Tokenizer'.\n",
-      "Some weights of Wav2Vec2ForCTC were not initialized from the model checkpoint at facebook/wav2vec2-base-960h and are newly initialized: ['wav2vec2.masked_spec_embed']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tokenizer = Wav2Vec2Tokenizer.from_pretrained(\"facebook/wav2vec2-base-960h\")\n",
     "model = Wav2Vec2ForCTC.from_pretrained(\"facebook/wav2vec2-base-960h\")"
@@ -83,27 +42,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_name = 'transcript.wav'"
+    "import wave\n",
+    "import json\n",
+    "\n",
+    "from vosk import Model, KaldiRecognizer, SetLogLevel\n",
+    "import Word as custom_Word\n",
+    "\n",
+    "model_path = \"models/vosk-model-en-us-0.21\"\n",
+    "audio_filename = \"audio/speech_recognition_systems.wav\"\n",
+    "\n",
+    "model = Model(model_path)\n",
+    "wf = wave.open(audio_filename, \"rb\")\n",
+    "rec = KaldiRecognizer(model, wf.getframerate())\n",
+    "rec.SetWords(True)\n",
+    "\n",
+    "# get the list of JSON dictionaries\n",
+    "results = []\n",
+    "# recognize speech using vosk model\n",
+    "while True:\n",
+    "    data = wf.readframes(4000)\n",
+    "    if len(data) == 0:\n",
+    "        break\n",
+    "    if rec.AcceptWaveform(data):\n",
+    "        part_result = json.loads(rec.Result())\n",
+    "        results.append(part_result)\n",
+    "part_result = json.loads(rec.FinalResult())\n",
+    "results.append(part_result)\n",
+    "\n",
+    "# convert list of JSON dictionaries to list of 'Word' objects\n",
+    "list_of_Words = []\n",
+    "for sentence in results:\n",
+    "    if len(sentence) == 1:\n",
+    "        # sometimes there are bugs in recognition \n",
+    "        # and it returns an empty dictionary\n",
+    "        # {'text': ''}\n",
+    "        continue\n",
+    "    for obj in sentence['result']:\n",
+    "        w = custom_Word.Word(obj)  # create custom Word object\n",
+    "        list_of_Words.append(w)  # and add it to list\n",
+    "\n",
+    "wf.close()  # close audiofile\n",
+    "\n",
+    "# output to the screen\n",
+    "for word in list_of_words:\n",
+    "    print(word.to_string())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WE'RE ENTERING AN ERA IN WHICH OUR ENEMIES CAN MAKE IT LOOK LIKE ANY ONE IS SAYING ANYTHING AT ANY POINT IN TIME EVEN IF THEY WOULD NEVER SAY THOSE THINGS SO FOR INSTANCE THEY COULD HAVE ME SAY THINGS LIKE I'LL KNOW KILMONGER WAS RIGHT OR BEN CARSON IS IN THE SUNKIN PLACES OR ABOUT THIS SIMPLY PRESIDENT TRUMP IS A TOTAL AND COMPLETE DIPSHIT NOW YOU SEE I WOULD NEVER SAY THESE THINGS AT LEAST NOT IN A PUBLIC ADDRESS BUT SOME ONE ELSE WOULD SOME ONE LIKE GEORGAN PEAL THIS IS A DANGEROUS TIME MOVING FORWARD WE NEED TO BE MORE VIGILANT WITH WHAT WE TRUST FROM THE INNER NET THAT'S A TIME WHEN WE NEED TO RELIVE ON TRUSTED NEW SOURCES MAY SOUND BASIC BUT HOW WE MOVE FORWARD IN THE AGE OF INFORMATION IS GOING TO BE THE DIFFERENCE BETWEEN WHETHER WE SURVIVE OR WHETHER WE BECOME SOME KIND OF FUCKED UP DISTOPIA THANK YOU STAY WOKE BITCHES\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import speech_recognition as sr\n",
+    "\n",
+    "r = sr.Recognizer()\n",
+    "\n",
+    "with sr.AudioFile('transcript.wav') as source:\n",
+    "    audio = r.record(source, duration=30)\n",
+    "    text = \"\"\n",
+    "    try:\n",
+    "        while True:\n",
+    "            text += r.recognize_google(audio)\n",
+    "            audio = r.record(source, duration=30)\n",
+    "    except sr.WaitTimeoutError:\n",
+    "        pass\n",
+    "\n",
+    "with open('output.txt', 'w') as f:\n",
+    "    f.write(text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = 'transcript.wav'\n",
+    "\n",
     "data = wavfile.read(file_name)\n",
     "framerate = data[0]\n",
     "sounddata = data[1]\n",
@@ -113,7 +133,88 @@
     "logits = model(input_values).logits\n",
     "predicted_ids = torch.argmax(logits, dim=-1)\n",
     "transcription = tokenizer.batch_decode(predicted_ids)[0]\n",
+    "print(transcription)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = 'transcript.wav'\n",
+    "framerate = 16000\n",
+    "input_audio, _ = librosa.load(file_name, sr=framerate)\n",
+    "\n",
+    "# Use a loop to process the audio file in segments, if it's too large to fit in memory\n",
+    "segment_length = 30  # in seconds\n",
+    "num_segments = int(np.ceil(len(input_audio) / (segment_length * framerate)))\n",
+    "transcription = ''\n",
+    "start_time = 0\n",
+    "for i in range(num_segments):\n",
+    "    start = i * segment_length * framerate\n",
+    "    end = (i + 1) * segment_length * framerate\n",
+    "    input_segment = input_audio[start:end]\n",
+    "    input_values = tokenizer(input_segment, return_tensors=\"pt\").input_values\n",
+    "    logits = model(input_values).logits\n",
+    "    predicted_ids = torch.argmax(logits, dim=-1)\n",
+    "    segment_transcription = tokenizer.batch_decode(predicted_ids)[0]\n",
+    "    transcription += segment_transcription\n",
+    "\n",
+    "    # Print the timestamp of every occurrence of the letter \"M\"\n",
+    "    for j, char in enumerate(segment_transcription):\n",
+    "        if char == 'M':\n",
+    "            print(f\"Occurrence of M found at {start_time + j / framerate} seconds\")\n",
+    "    start_time += segment_length\n",
+    "\n",
     "print(transcription)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'acoustic_model.pt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-24-080770189fd6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[0mmfccs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlibrosa\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfeature\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmfcc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0maudio_data\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msr\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mrate\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_mfcc\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m13\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m     \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"acoustic_model.pt\"\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# load a pre-trained acoustic model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m     \u001b[0minputs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmfccs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munsqueeze\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# add a batch dimension to the inputs\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[0moutputs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# run the inputs through the acoustic model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Python\\Python38\\lib\\site-packages\\torch\\serialization.py\u001b[0m in \u001b[0;36mload\u001b[1;34m(f, map_location, pickle_module, weights_only, **pickle_load_args)\u001b[0m\n\u001b[0;32m    769\u001b[0m         \u001b[0mpickle_load_args\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'encoding'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'utf-8'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    770\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 771\u001b[1;33m     \u001b[1;32mwith\u001b[0m \u001b[0m_open_file_like\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'rb'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mopened_file\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    772\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0m_is_zipfile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mopened_file\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    773\u001b[0m             \u001b[1;31m# The zipfile reader is going to advance the current file position.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Python\\Python38\\lib\\site-packages\\torch\\serialization.py\u001b[0m in \u001b[0;36m_open_file_like\u001b[1;34m(name_or_buffer, mode)\u001b[0m\n\u001b[0;32m    268\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0m_open_file_like\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname_or_buffer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    269\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0m_is_path\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname_or_buffer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 270\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0m_open_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname_or_buffer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    271\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    272\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;34m'w'\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Python\\Python38\\lib\\site-packages\\torch\\serialization.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, name, mode)\u001b[0m\n\u001b[0;32m    249\u001b[0m \u001b[1;32mclass\u001b[0m \u001b[0m_open_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_opener\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    250\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 251\u001b[1;33m         \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_open_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    252\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    253\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__exit__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'acoustic_model.pt'"
+     ]
+    }
+   ],
+   "source": [
+    "import librosa\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "import wave\n",
+    "import contextlib\n",
+    "\n",
+    "filename = 'transcript.wav'\n",
+    "\n",
+    "with contextlib.closing(wave.open(filename,'r')) as f:\n",
+    "    rate, audio_data = wavfile.read(filename)\n",
+    "    audio_data = audio_data.T\n",
+    "    audio_data = audio_data / np.max(np.abs(audio_data))  # normalize the audio data to the range [-1, 1]\n",
+    "\n",
+    "    mfccs = librosa.feature.mfcc(y=audio_data, sr=rate, n_mfcc=13)\n",
+    "\n",
+    "    model = torch.load(\"acoustic_model.pt\")  # load a pre-trained acoustic model\n",
+    "    inputs = torch.tensor(mfccs.T).unsqueeze(0)  # add a batch dimension to the inputs\n",
+    "    outputs = model(inputs)  # run the inputs through the acoustic model\n",
+    "    _, predicted_phonemes = torch.max(outputs, dim=2)  # get the predicted phonemes\n",
+    "\n",
+    "    for i, predicted_phoneme in enumerate(predicted_phonemes[0]):\n",
+    "        if predicted_phoneme == \"M\":  # check if the predicted phoneme is \"M\"\n",
+    "            time = i * (len(audio_data) / mfccs.shape[1]) / rate\n",
+    "            print(\"Phonetic sound of M found at time: {:.2f} seconds\".format(time))\n"
    ]
   }
  ],
@@ -133,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3rc1"
+   "version": "3.8.3"
   },
   "orig_nbformat": 4,
   "vscode": {
