--- a/Components/OpenCV Test/opencv.ipynb
+++ b/Components/OpenCV Test/opencv.ipynb
@@ -18,26 +18,26 @@
    ],
    "source": [
     "import cv2\n",
-    " \n",
+    "\n",
     "capture = cv2.VideoCapture('OpenCV test.mp4')\n",
-    " \n",
+    "\n",
     "frameNr = 0\n",
-    " \n",
+    "\n",
     "while (True):\n",
-    " \n",
+    "\n",
     "    success, frame = capture.read()\n",
-    " \n",
+    "\n",
     "    if success:\n",
     "        cv2.imwrite(f'output/frame_{frameNr}.jpg', frame)\n",
-    " \n",
+    "\n",
     "    else:\n",
     "        break\n",
-    " \n",
+    "\n",
     "    frameNr = frameNr+1\n",
-    " \n",
+    "\n",
     "capture.release()\n",
     "\n",
-    "frameNr"
+    "frameNr\n"
    ]
   },
   {
@@ -59,36 +59,37 @@
    "source": [
     "import cv2\n",
     "import mediapipe\n",
-    " \n",
+    "\n",
     "drawingModule = mediapipe.solutions.drawing_utils\n",
     "handsModule = mediapipe.solutions.hands\n",
-    " \n",
+    "\n",
     "capture = cv2.VideoCapture('OpenCV test.mp4')\n",
-    " \n",
+    "\n",
     "frameNr = 0\n",
-    " \n",
+    "\n",
     "with handsModule.Hands() as hands:\n",
-    " \n",
+    "\n",
     "    while (True):\n",
-    " \n",
+    "\n",
     "        success, frame = capture.read()\n",
-    " \n",
+    "\n",
     "        if not success:\n",
     "            break\n",
-    " \n",
+    "\n",
     "        results = hands.process(cv2.cvtColor(frame, cv2.COLOR_BGR2RGB))\n",
-    " \n",
+    "\n",
     "        if results.multi_hand_landmarks != None:\n",
     "            for handLandmarks in results.multi_hand_landmarks:\n",
-    "                drawingModule.draw_landmarks(frame, handLandmarks, handsModule.HAND_CONNECTIONS)\n",
-    " \n",
+    "                drawingModule.draw_landmarks(\n",
+    "                    frame, handLandmarks, handsModule.HAND_CONNECTIONS)\n",
+    "\n",
     "        cv2.imwrite(f'output/frame_{frameNr}.jpg', frame)\n",
-    " \n",
+    "\n",
     "        frameNr = frameNr+1\n",
-    " \n",
+    "\n",
     "capture.release()\n",
     "\n",
-    "frameNr"
+    "frameNr\n"
    ]
   },
   {
@@ -98,31 +99,32 @@
    "outputs": [],
    "source": [
     "import dlib\n",
-    " \n",
+    "\n",
     "img = dlib.load_rgb_image(\"C:/Users/N/Desktop/Test.jpg\")\n",
     "win = dlib.image_window(img, \"Image\")\n",
-    " \n",
+    "\n",
     "detector = dlib.get_frontal_face_detector()\n",
     "faces = detector(img)\n",
     "win.add_overlay(faces)\n",
-    " \n",
-    "predictor = dlib.shape_predictor(\"C:/Users/N/Desktop/shape_predictor_68_face_landmarks.dat\")\n",
-    " \n",
+    "\n",
+    "predictor = dlib.shape_predictor(\n",
+    "    \"C:/Users/N/Desktop/shape_predictor_68_face_landmarks.dat\")\n",
+    "\n",
     "for face in faces:\n",
     "    landmarks = predictor(img, face)\n",
-    " \n",
+    "\n",
     "    print(landmarks.num_parts)\n",
-    " \n",
+    "\n",
     "    for part in landmarks.parts():\n",
     "        win.add_overlay_circle(part, 2)\n",
-    " \n",
-    "win.wait_until_closed()"
+    "\n",
+    "win.wait_until_closed()\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.3rc1 64-bit",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -136,12 +138,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3rc1 (tags/v3.8.3rc1:802eb67, Apr 29 2020, 21:39:14) [MSC v.1924 64 bit (AMD64)]"
+   "version": "3.9.5 (tags/v3.9.5:0a7dcbd, May  3 2021, 17:27:52) [MSC v.1928 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b081a66ee97bd2b6a16f43955f1d810b7ea816d6eaeb65e157ef9e038445f0c6"
+    "hash": "65f0376e53f64dc0830bdf4e1e0f1cda09c8e2cd15e90a6fa5827398e6ad0a59"
    }
   }
  },
