--- a/Components/OpenCV Test/opencv.ipynb
+++ b/Components/OpenCV Test/opencv.ipynb
@@ -136,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3rc1 (tags/v3.8.3rc1:802eb67, Apr 29 2020, 21:39:14) [MSC v.1924 64 bit (AMD64)]"
+   "version": "3.8.3"
   },
   "orig_nbformat": 4,
   "vscode": {
