Sample Video Input

--- a/Components/Phoneme Extraction/tensorflow.ipynb
+++ b/Components/Phoneme Extraction/tensorflow.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of Wav2Vec2ForCTC were not initialized from the model checkpoint at facebook/wav2vec2-large-960h-lv60-self and are newly initialized: ['wav2vec2.masked_spec_embed']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "The tokenizer class you load from this checkpoint is not the same type as the class this function is called from. It may result in unexpected tokenization. \n",
+      "The tokenizer class you load from this checkpoint is 'Wav2Vec2CTCTokenizer'. \n",
+      "The class this function is called from is 'Wav2Vec2Tokenizer'.\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import librosa\n",
@@ -19,12 +31,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WE'RE ENTERING AN ERA IN WHICH OUR ENEMIES CAN MAKE IT LOOK LIKE ANYONE IS SAYING ANYTHING AT ANY POINT IN TIME EVEN IF THEY WOULD NEVER SAY THOSE THINGS SO FOR INSTANCE THEY COULD HAVE ME SAY THINGS LIKE I DON'T KNOW KILLMONGER WAS RIGHT OR BEN CARSON IS IN THE SUNKIN PLACE OR HOW ABOUT THIS SIMPLY PRESIDENT TRUMP IS A TOTAL AND COMPLETE DIPSHIT NOW YOU SEE I WOULDT NEVER SAY THESE THINGS AT LEAST NOT IN A PUBLIC ADDRESS BUT SOMEONE ELSE WOULD SOMEONE LIKE GORDAN PEEL THIS IS A DANGEROUS TIME MOVING FORWARD WE NEED TO BE MORE VIGILANT WITH WHAT WE TRUST FROM THE INTERNET AT'S A TIME WHEN WE NEED TO RELY ON TRUSTED NEW SOURCES MAY SOUND BASIC BUT HOW WE MOVE FORWARD IN THE AGE OF INFORMATION ITIS GOING TO BE THE DIFFERENCE BETWEEN WHETHER WE SURVIVE OR WHETHER WE BECOME SOME KIND OF FUCKED UP DISTOPIA THANK YOU STAY WOLK PITCHES\n",
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "# Load WAV file and extract features\n",
-    "audio_file = \"harvard.wav\"\n",
+    "audio_file = \"transcript.wav\"\n",
     "signal, sample_rate = librosa.load(audio_file, sr=16000)\n",
     "inputs = tokenizer(signal, return_tensors=\"pt\", padding=True)\n",
     "\n",
@@ -34,9 +55,10 @@
     "\n",
     "predicted_ids = np.argmax(outputs.logits, axis=-1)\n",
     "transcription = tokenizer.batch_decode(predicted_ids)[0]\n",
+    "print(transcription)\n",
     "\n",
     "# Identify timestamps of 'm' phoneme with confidence above a certain threshold\n",
-    "m_indices = [i for i, (ph, conf) in enumerate(zip(transcription, outputs.logits.softmax(-1).max(-1).values)) if ph == 'm' and conf > 0.9]\n",
+    "m_indices = [i for i, (ph, conf) in enumerate(zip(transcription, outputs.logits.softmax(-1).max(-1).values)) if ph == 'M' and conf > 0.7]\n",
     "m_timestamps = [(idx * 0.02, (idx+1) * 0.02) for idx in m_indices]  # assuming frame shift of 0.02 seconds\n",
     "\n",
     "print(m_timestamps)"
@@ -44,94 +66,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import torchaudio\n",
-    "import librosa\n",
+    "import deepspeech\n",
     "import numpy as np\n",
-    "from sklearn.cluster import AgglomerativeClustering\n",
+    "import wave\n",
     "\n",
-    "# Load the fine-tuned Facebook Wav2Vec2 model\n",
-    "model = torch.hub.load('pytorch/fairseq', 'wav2vec2_large', 'facebook/wav2vec2-large-960h-lv60-self')\n",
+    "# Load the DeepSpeech model\n",
+    "model = deepspeech.Model('deepspeech-0.9.3-models.pbmm')\n",
     "\n",
-    "# Load the test audio file\n",
-    "test_file = \"harvard.wav\"\n",
-    "waveform, sample_rate = torchaudio.load(test_file)\n",
+    "# Load the audio file\n",
+    "audio_file = wave.open('transcript.wav', 'rb')\n",
+    "audio_data = audio_file.readframes(audio_file.getnframes())\n",
     "\n",
-    "# Preprocess the audio file\n",
-    "resampler = torchaudio.transforms.Resample(sample_rate, 16000)\n",
-    "waveform = resampler(waveform)\n",
-    "feature_extractor = model.feature_extractor\n",
-    "with torch.no_grad():\n",
-    "    features = feature_extractor(waveform)\n",
-    "features = np.array(features.squeeze(0))\n",
+    "# Convert the audio data to a NumPy array\n",
+    "audio_data_np = np.frombuffer(audio_data, np.int16)\n",
     "\n",
-    "# Get the phonemes and their timestamps\n",
-    "phonemes = []\n",
-    "start_times = []\n",
-    "end_times = []\n",
+    "# Transcribe the audio file\n",
+    "transcript = model.stt(audio_data_np)\n",
+    "print(transcript)\n",
     "\n",
-    "clustering = AgglomerativeClustering(n_clusters=None, distance_threshold=15, linkage='complete')\n",
-    "cluster_labels = clustering.fit_predict(features)\n",
-    "for i, label in enumerate(cluster_labels):\n",
-    "    if i == 0 or label != cluster_labels[i-1]:\n",
-    "        phoneme = model.task.target_dictionary.string([label + 4]) # +4 because the first 4 symbols are reserved for special tokens\n",
-    "        if phoneme in ['m', 'b', 'p']:\n",
-    "            phonemes.append(phoneme)\n",
-    "            start_times.append((i * 10) / 1000) # start time in seconds\n",
-    "    if i == len(cluster_labels) - 1 or label != cluster_labels[i+1]:\n",
-    "        end_times.append(((i+1) * 10) / 1000) # end time in seconds\n",
+    "# Extract the phonemes with closed mouth shapes\n",
+    "closed_mouth_phonemes = ['M', 'B', 'P']\n",
+    "phonemes = transcript.split(' ')\n",
+    "closed_mouth_phonemes_detected = [p for p in phonemes if p in closed_mouth_phonemes]\n",
     "\n",
-    "# Combine the phonemes and their timestamps\n",
-    "phoneme_times = [f\"{phoneme}-{start_time:.3f}\" for phoneme, start_time in zip(phonemes, start_times)]\n",
-    "\n",
-    "# Print the phonemes and their timestamps\n",
-    "print(phoneme_times)"
+    "# Print the detected phonemes\n",
+    "print('Closed mouth phonemes detected: ', closed_mouth_phonemes_detected)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The tokenizer class you load from this checkpoint is not the same type as the class this function is called from. It may result in unexpected tokenization. \n",
+      "The tokenizer class you load from this checkpoint is 'Wav2Vec2CTCTokenizer'. \n",
+      "The class this function is called from is 'Wav2Vec2Tokenizer'.\n",
+      "Some weights of Wav2Vec2ForCTC were not initialized from the model checkpoint at facebook/wav2vec2-base-960h and are newly initialized: ['wav2vec2.masked_spec_embed']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "702\n",
+      "<class 'float'>\n",
+      "<class 'float'>\n",
+      "<class 'float'>\n",
+      "134\n",
+      "<class 'float'>\n",
+      "<class 'float'>\n",
+      "<class 'float'>\n",
+      "Phoneme times:\n",
+      "M: ['3.248', '4.017', '9.402', '15.983', '18.632', '24.701', '26.239', '27.949', '36.325', '38.034', '42.051', '42.308', '44.786', '47.863', '50.171', '54.188', '56.496', '59.231', '56.600', '56.874']\n",
+      "B: ['20.342', '23.675', '34.701', '35.812', '44.530', '55.043', '55.556', '53.144', '54.132', '56.380', '59.616']\n",
+      "P: ['8.462', '22.735', '24.786', '25.128', '26.325', '28.034', '28.718', '34.530', '39.744', '57.916', '58.300']\n"
+     ]
+    }
+   ],
    "source": [
+    "import torch\n",
     "import librosa\n",
-    "import subprocess\n",
+    "import numpy as np\n",
+    "from transformers import Wav2Vec2Tokenizer, Wav2Vec2ForCTC\n",
     "\n",
-    "# Load WAV file and extract features\n",
-    "audio_file = \"example.wav\"\n",
-    "signal, sample_rate = librosa.load(audio_file, sr=16000)\n",
-    "mfccs = librosa.feature.mfcc(y=signal, sr=sample_rate, n_mfcc=13, hop_length=256)\n",
+    "# Load the audio file and resample it to the required sample rate\n",
+    "audio_file = 'transcript.wav'\n",
+    "sr = 16000\n",
+    "audio, _ = librosa.load(audio_file, sr=sr)\n",
     "\n",
-    "# Reshape and write the features to disk as Kaldi input\n",
-    "features = mfccs.transpose()\n",
-    "with open(\"example.ark\", \"wb\") as f:\n",
-    "    f.write(f\"{audio_file} [\".encode())\n",
-    "    for i in range(features.shape[0]):\n",
-    "        f.write(f\" {i} \".encode())\n",
-    "        for j in range(features.shape[1]):\n",
-    "            f.write(struct.pack(\"<f\", features[i,j]))\n",
-    "    f.write(\"]\\n\".encode())\n",
+    "# Split the audio file into segments of 5 seconds\n",
+    "segment_len = 60 * sr\n",
+    "segments = [audio[i:i+segment_len] for i in range(0, len(audio), segment_len)]\n",
     "\n",
-    "# Use Kaldi to perform speech recognition and identify 'm' phoneme\n",
-    "cmd = [\"online2-wav-nnet3-latgen-faster\", \"--rt-max=5\", \"--frames-per-chunk=20\", \"--acoustic-scale=1.0\",\n",
-    "       \"--beam=12.0\", \"--lattice-beam=6.0\", \"--max-active=7000\", \"--min-active=200\", \"--do-endpointing=false\",\n",
-    "       \"--config=exp/tdnn_lstm_asr_baseline_sp/config.yaml\", \"exp/tdnn_lstm_asr_baseline_sp/final.mdl\",\n",
-    "       \"exp/tdnn_lstm_asr_baseline_sp/graph/HCLG.fst\", \"exp/tdnn_lstm_asr_baseline_sp/graph/words.txt\",\n",
-    "       \"example.ark\", \"example.lat\"]\n",
-    "subprocess.run(cmd)\n",
+    "# Load the Wav2Vec2 tokenizer and model\n",
+    "tokenizer = Wav2Vec2Tokenizer.from_pretrained(\"facebook/wav2vec2-base-960h\")\n",
+    "model = Wav2Vec2ForCTC.from_pretrained(\"facebook/wav2vec2-base-960h\")\n",
     "\n",
-    "# Read the output lattice and identify 'm' phoneme\n",
-    "with open(\"example.lat\", \"r\") as f:\n",
-    "    for line in f:\n",
-    "        if \"m\" in line:\n",
-    "            fields = line.strip().split()\n",
-    "            start_time = int(fields[2]) * 0.032\n",
-    "            end_time = int(fields[3]) * 0.032\n",
-    "            print(f\"m phoneme found at {start_time}-{end_time} seconds\")\n"
+    "# Define the phonemes of interest\n",
+    "target_phonemes = ['M', 'B', 'P']\n",
+    "\n",
+    "# Initialize the output array for the phoneme times\n",
+    "phoneme_times = {ph: [] for ph in target_phonemes}\n",
+    "\n",
+    "# Iterate over the audio segments and predict the phonemes\n",
+    "for i, segment in enumerate(segments):\n",
+    "    input_values = tokenizer(segment, return_tensors='pt').input_values\n",
+    "    with torch.no_grad():\n",
+    "        logits = model(input_values).logits\n",
+    "    predicted_ids = torch.argmax(logits, dim=-1)\n",
+    "    predicted_phonemes = tokenizer.batch_decode(predicted_ids)[0]\n",
+    "    print(len(predicted_phonemes))\n",
+    "\n",
+    "    # Add the times of occurrence of the target phonemes to the output array\n",
+    "    for ph in target_phonemes:\n",
+    "        ph_indices = [j for j, p in enumerate(predicted_phonemes) if p == ph]\n",
+    "        ph_times = [((i*segment_len + j) * (1.0/sr)) for j in ph_indices]\n",
+    "        end_val = ((i*segment_len + len(predicted_phonemes)) * (1.0/sr))\n",
+    "        end_val = (int(end_val) + ((end_val - int(end_val))*1000))\n",
+    "        print(type(end_val))\n",
+    "\n",
+    "        for k in range(len(ph_times)):\n",
+    "            num = ph_times[k]\n",
+    "            ph_times[k] = format(((int(num) + ((num - int(num))*1000)) * (segment_len/sr) * (1.0/end_val)), \".3f\")\n",
+    "        phoneme_times[ph].extend(ph_times)\n",
+    "\n",
+    "# Print the output phoneme times\n",
+    "print('Phoneme times:')\n",
+    "for ph in target_phonemes:\n",
+    "    print(f'{ph}: {phoneme_times[ph]}')\n"
    ]
   }
  ],
@@ -151,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3rc1"
+   "version": "3.8.3"
   },
   "orig_nbformat": 4,
   "vscode": {
