--- a/Components/Speech2Text/speech2text.ipynb
+++ b/Components/Speech2Text/speech2text.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,21 +20,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MoviePy - Writing audio in ./transcript.wav\n"
+      "MoviePy - Writing audio in ./reuben.wav\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                      "
+      "                                                                      \r"
      ]
     },
     {
@@ -43,21 +43,14 @@
      "text": [
       "MoviePy - Done.\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r"
-     ]
     }
    ],
    "source": [
     "# Insert Local Video File Path \n",
-    "clip = mp.VideoFileClip(r\"./obamaDeepfake.mp4\")\n",
+    "clip = mp.VideoFileClip(r\"./reuben_deepfake.mp4\")\n",
     "  \n",
     "# Insert Local Audio File Path\n",
-    "clip.audio.write_audiofile(r\"./transcript.wav\")"
+    "clip.audio.write_audiofile(r\"./reuben.wav\")"
    ]
   },
   {
@@ -84,9 +77,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "more                 from 1.41 sec to 1.83 sec, confidence is 66.42%\n",
+      "and                  from 1.83 sec to 2.19 sec, confidence is 100.00%\n",
+      "torn                 from 2.19 sec to 2.76 sec, confidence is 100.00%\n",
+      "an                   from 2.76 sec to 3.03 sec, confidence is 79.73%\n",
+      "hour                 from 3.06 sec to 4.05 sec, confidence is 79.73%\n",
+      "the                  from 4.23 sec to 4.41 sec, confidence is 100.00%\n",
+      "whole                from 4.41 sec to 4.95 sec, confidence is 100.00%\n",
+      "armor                from 4.95 sec to 5.34 sec, confidence is 60.49%\n",
+      "mashed               from 5.34 sec to 6.00 sec, confidence is 91.17%\n",
+      "but                  from 6.00 sec to 6.55 sec, confidence is 83.27%\n",
+      "look                 from 6.60 sec to 7.02 sec, confidence is 52.81%\n",
+      "where                from 7.02 sec to 7.38 sec, confidence is 86.14%\n",
+      "are                  from 7.56 sec to 8.01 sec, confidence is 89.74%\n",
+      "you                  from 8.01 sec to 8.29 sec, confidence is 89.74%\n",
+      "i'm                  from 8.29 sec to 8.64 sec, confidence is 87.40%\n",
+      "sure                 from 8.67 sec to 9.42 sec, confidence is 98.34%\n",
+      "yeah                 from 11.37 sec to 11.64 sec, confidence is 82.27%\n",
+      "as                   from 13.86 sec to 14.25 sec, confidence is 100.00%\n",
+      "much                 from 14.28 sec to 14.58 sec, confidence is 59.16%\n",
+      "as                   from 15.12 sec to 15.45 sec, confidence is 100.00%\n",
+      "of                   from 15.45 sec to 15.57 sec, confidence is 71.60%\n",
+      "shadows              from 15.57 sec to 16.47 sec, confidence is 68.29%\n",
+      "furnish              from 16.47 sec to 17.40 sec, confidence is 64.35%\n",
+      "sure                 from 18.84 sec to 19.50 sec, confidence is 79.89%\n",
+      "forge                from 22.05 sec to 22.89 sec, confidence is 51.18%\n",
+      "judged               from 22.89 sec to 23.50 sec, confidence is 42.70%\n",
+      "that                 from 23.50 sec to 23.85 sec, confidence is 87.12%\n",
+      "sharp                from 25.20 sec to 25.86 sec, confidence is 81.41%\n",
+      "fanged               from 25.89 sec to 26.61 sec, confidence is 54.02%\n",
+      "that                 from 26.61 sec to 27.36 sec, confidence is 79.82%\n",
+      "i                    from 32.31 sec to 32.49 sec, confidence is 89.52%\n",
+      "learned              from 32.49 sec to 33.21 sec, confidence is 84.85%\n",
+      "this                 from 33.49 sec to 33.81 sec, confidence is 76.29%\n",
+      "one                  from 33.81 sec to 34.44 sec, confidence is 45.83%\n",
+      "and                  from 38.61 sec to 39.06 sec, confidence is 84.70%\n",
+      "kosher               from 39.09 sec to 39.93 sec, confidence is 75.85%\n",
+      "version              from 39.96 sec to 40.47 sec, confidence is 75.85%\n",
+      "was                  from 40.47 sec to 40.65 sec, confidence is 100.00%\n",
+      "shown                from 40.65 sec to 41.04 sec, confidence is 100.00%\n",
+      "to                   from 41.07 sec to 41.31 sec, confidence is 100.00%\n",
+      "flash                from 41.38 sec to 42.27 sec, confidence is 38.32%\n",
+      "albert               from 44.46 sec to 45.09 sec, confidence is 87.02%\n",
+      "and                  from 45.09 sec to 45.21 sec, confidence is 64.86%\n",
+      "shell                from 45.24 sec to 45.78 sec, confidence is 84.56%\n",
+      "pierre               from 45.78 sec to 46.32 sec, confidence is 90.53%\n",
+      "punishment           from 47.76 sec to 48.54 sec, confidence is 100.00%\n",
+      "could                from 48.57 sec to 49.20 sec, confidence is 86.97%\n",
+      "shift                from 49.44 sec to 49.77 sec, confidence is 81.86%\n",
+      "to                   from 49.80 sec to 50.22 sec, confidence is 93.74%\n",
+      "less                 from 50.22 sec to 50.70 sec, confidence is 63.25%\n",
+      "than                 from 51.18 sec to 51.54 sec, confidence is 63.25%\n",
+      "that                 from 51.54 sec to 51.82 sec, confidence is 80.12%\n",
+      "oh                   from 54.99 sec to 55.47 sec, confidence is 100.00%\n",
+      "shy                  from 57.54 sec to 58.21 sec, confidence is 62.61%\n",
+      "as                   from 58.21 sec to 58.46 sec, confidence is 40.99%\n",
+      "the                  from 58.46 sec to 58.62 sec, confidence is 59.63%\n",
+      "novel                from 58.62 sec to 59.22 sec, confidence is 100.00%\n",
+      "shy                  from 59.22 sec to 59.70 sec, confidence is 94.22%\n",
+      "stretch              from 60.12 sec to 61.32 sec, confidence is 73.49%\n",
+      "shirt                from 63.54 sec to 64.14 sec, confidence is 45.69%\n",
+      "with                 from 64.17 sec to 64.38 sec, confidence is 74.87%\n",
+      "peggy                from 64.38 sec to 64.80 sec, confidence is 30.00%\n",
+      "to                   from 64.84 sec to 65.04 sec, confidence is 90.18%\n",
+      "quash                from 65.07 sec to 65.94 sec, confidence is 98.24%\n",
+      "that                 from 66.03 sec to 66.60 sec, confidence is 100.00%\n",
+      "sugar                from 68.37 sec to 68.88 sec, confidence is 48.62%\n",
+      "rush                 from 68.91 sec to 69.63 sec, confidence is 48.62%\n",
+      "shared               from 71.58 sec to 72.20 sec, confidence is 37.36%\n",
+      "yeah                 from 75.15 sec to 75.42 sec, confidence is 54.88%\n",
+      "cool                 from 75.51 sec to 76.20 sec, confidence is 36.31%\n",
+      "shut                 from 80.22 sec to 80.79 sec, confidence is 94.42%\n",
+      "down                 from 80.82 sec to 81.30 sec, confidence is 94.42%\n",
+      "horse                from 81.30 sec to 81.78 sec, confidence is 100.00%\n",
+      "trail                from 81.78 sec to 82.53 sec, confidence is 100.00%\n",
+      "live                 from 86.76 sec to 87.15 sec, confidence is 66.02%\n",
+      "and                  from 87.15 sec to 87.36 sec, confidence is 92.71%\n",
+      "food                 from 87.39 sec to 88.08 sec, confidence is 100.00%\n",
+      "an                   from 89.28 sec to 89.81 sec, confidence is 68.36%\n",
+      "old                  from 89.82 sec to 90.12 sec, confidence is 37.00%\n",
+      "factory              from 90.15 sec to 91.02 sec, confidence is 100.00%\n",
+      "with                 from 91.08 sec to 91.39 sec, confidence is 100.00%\n",
+      "the                  from 91.41 sec to 92.01 sec, confidence is 72.23%\n",
+      "forceful             from 92.07 sec to 93.09 sec, confidence is 70.37%\n",
+      "habit                from 93.12 sec to 93.87 sec, confidence is 100.00%\n",
+      "charm                from 96.00 sec to 97.14 sec, confidence is 95.61%\n",
+      "the                  from 98.16 sec to 99.27 sec, confidence is 86.04%\n",
+      "question             from 100.38 sec to 101.22 sec, confidence is 100.00%\n",
+      "should               from 101.70 sec to 102.12 sec, confidence is 100.00%\n",
+      "wash                 from 102.12 sec to 102.90 sec, confidence is 100.00%\n",
+      "show                 from 106.71 sec to 107.31 sec, confidence is 100.00%\n",
+      "that                 from 107.34 sec to 107.64 sec, confidence is 40.57%\n",
+      "shit                 from 107.67 sec to 108.30 sec, confidence is 40.57%\n",
+      "that                 from 109.65 sec to 109.92 sec, confidence is 92.30%\n",
+      "whole                from 109.92 sec to 110.55 sec, confidence is 74.81%\n",
+      "scene                from 111.27 sec to 112.11 sec, confidence is 66.58%\n",
+      "ah                   from 115.14 sec to 115.56 sec, confidence is 49.45%\n",
+      "come                 from 115.59 sec to 115.89 sec, confidence is 53.93%\n",
+      "on                   from 115.89 sec to 116.10 sec, confidence is 65.75%\n",
+      "flash                from 116.10 sec to 116.94 sec, confidence is 82.10%\n",
+      "she                  from 119.40 sec to 120.09 sec, confidence is 45.26%\n",
+      "added                from 121.20 sec to 121.53 sec, confidence is 45.26%\n",
+      "that                 from 121.53 sec to 121.85 sec, confidence is 45.71%\n",
+      "our                  from 122.07 sec to 122.28 sec, confidence is 60.62%\n",
+      "phones               from 122.28 sec to 122.70 sec, confidence is 77.78%\n",
+      "patrol               from 122.70 sec to 123.15 sec, confidence is 99.48%\n",
+      "on                   from 123.15 sec to 123.48 sec, confidence is 92.40%\n",
+      "the                  from 123.51 sec to 123.87 sec, confidence is 97.84%\n",
+      "national             from 123.87 sec to 124.54 sec, confidence is 100.00%\n",
+      "birth                from 124.54 sec to 125.64 sec, confidence is 42.63%\n",
+      "while                from 126.72 sec to 127.65 sec, confidence is 90.33%\n",
+      "the                  from 128.01 sec to 128.16 sec, confidence is 50.76%\n",
+      "whole                from 128.22 sec to 128.64 sec, confidence is 55.27%\n",
+      "show                 from 128.64 sec to 129.15 sec, confidence is 100.00%\n",
+      "turbans              from 129.18 sec to 129.89 sec, confidence is 73.41%\n",
+      "said                 from 129.89 sec to 130.59 sec, confidence is 83.90%\n",
+      "the                  from 130.65 sec to 131.04 sec, confidence is 100.00%\n",
+      "trash                from 131.10 sec to 131.53 sec, confidence is 27.76%\n",
+      "sry                  from 136.83 sec to 137.49 sec, confidence is 30.14%\n",
+      "loot                 from 137.54 sec to 138.09 sec, confidence is 92.34%\n",
+      "the                  from 138.15 sec to 138.39 sec, confidence is 99.88%\n",
+      "crash                from 138.39 sec to 138.99 sec, confidence is 85.16%\n"
+     ]
+    }
+   ],
    "source": [
     "import wave\n",
     "import json\n",
@@ -94,8 +215,8 @@
     "from vosk import Model, KaldiRecognizer, SetLogLevel\n",
     "import Word as custom_Word\n",
     "\n",
-    "model_path = \"models/vosk-model-en-us-0.21\"\n",
-    "audio_filename = \"audio/speech_recognition_systems.wav\"\n",
+    "model_path = \"vosk-model-en-us-0.21\"\n",
+    "audio_filename = \"transcript.wav\"\n",
     "\n",
     "model = Model(model_path)\n",
     "wf = wave.open(audio_filename, \"rb\")\n",
@@ -130,7 +251,7 @@
     "wf.close()  # close audiofile\n",
     "\n",
     "# output to the screen\n",
-    "for word in list_of_words:\n",
+    "for word in list_of_Words:\n",
     "    print(word.to_string())"
    ]
   },
