Viseme extraction packaging

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,8 @@
     "# import librosa\n",
     "import moviepy.editor as mp\n",
     "from Components.Phoneme_Extraction import speech2text\n",
-    "from Components.p2fa_py3.p2fa import align"
+    "from Components.p2fa_py3.p2fa import align\n",
+    "from Components.Viseme_Extraction import viseme"
    ]
   },
   {
@@ -320,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,15 +330,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Viseme Extraction\n",
+    "\n",
+    "#import libraires\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "frames=viseme.extract_frames(video_path,target_phoneme_timestamps)\n",
+    "\n",
+    "# Define the output folder\n",
+    "frame_path = \"./Datasets/Viseme_frames\"\n",
+    "\n",
+    "# Loop through the frames and save them to the output folder\n",
+    "for i, frame in enumerate(frames):\n",
+    "    cv2.imwrite(frame_path + \"/frame_{}.jpg\".format(i), frame)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -351,12 +366,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3rc1"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b081a66ee97bd2b6a16f43955f1d810b7ea816d6eaeb65e157ef9e038445f0c6"
+    "hash": "6f5583cf1d9466b5c27e75c89cc6b383bed5736d6b16c51c8074d8690011a952"
    }
   }
  },
