--- a/Components/Viseme_Extraction/frameExtraction.ipynb
+++ b/Components/Viseme_Extraction/frameExtraction.ipynb
@@ -156,11 +156,60 @@
     "# Release the video\n",
     "video.release()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "# Load the video\n",
+    "video = cv2.VideoCapture(\"obamaDeepfake.mp4\")\n",
+    "\n",
+    "# Get the video properties\n",
+    "total_frames = int(video.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+    "frame_rate = video.get(cv2.CAP_PROP_FPS)\n",
+    "\n",
+    "# Define the array of timestamp ranges\n",
+    "time_stamp_ranges = [(start_time1, end_time1), (start_time2, end_time2), ...]\n",
+    "\n",
+    "# Loop through the timestamp ranges\n",
+    "for start_stamp, end_stamp in time_stamp_ranges:\n",
+    "    # Calculate the frame numbers for the given start and end timestamps\n",
+    "    start_frame = int(start_stamp[0] * frame_rate + start_stamp[1] * frame_rate)\n",
+    "    end_frame = int(end_stamp[0] * frame_rate + end_stamp[1] * frame_rate)\n",
+    "\n",
+    "    # Check if the frame numbers are within the range of the video\n",
+    "    if end_frame >= total_frames:\n",
+    "        print(\"Error: Frame number out of range\")\n",
+    "        continue\n",
+    "\n",
+    "    # Calculate the frame interval between each extracted frame\n",
+    "    num_frames = end_frame - start_frame + 1\n",
+    "    frame_interval = max(num_frames // 6, 1)\n",
+    "\n",
+    "    # Loop through the range of frame numbers and extract frames at intervals of the frame interval\n",
+    "    for i in range(start_frame, end_frame + 1, frame_interval):\n",
+    "        # Set the video position to the desired frame\n",
+    "        video.set(cv2.CAP_PROP_POS_FRAMES, i)\n",
+    "\n",
+    "        # Read the frame\n",
+    "        _, frame = video.read()\n",
+    "\n",
+    "        # Save the frame as an image\n",
+    "        cv2.imwrite(\"output/frame_{}_{}.jpg\".format(start_stamp[0], i), frame)\n",
+    "\n",
+    "# Release the video\n",
+    "video.release()\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -174,12 +223,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3rc1"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b081a66ee97bd2b6a16f43955f1d810b7ea816d6eaeb65e157ef9e038445f0c6"
+    "hash": "6f5583cf1d9466b5c27e75c89cc6b383bed5736d6b16c51c8074d8690011a952"
    }
   }
  },
